apps/mediumplace/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http
  namespace: mediumplace
spec:
  ingressClassName: nginx
  rules:
  - host: podinfo.medium.place
    http:
      paths:
      - backend:
          service:
            name: podinfo
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
